--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /samples/
 /dump*
 composer.lock
+.buildpath
+.project
+.settings/org.eclipse.php.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
