--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
-    "name": "smalot/cups-ipp",
+    "name": "maddin-68/cups-ipp",
     "description": "CUPS Implementation of IPP - PHP Client API",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Sebastien Malot",
-            "email": "sebastien@malot.fr"
+            "name": "Martin Klaeui",
+            "email": "maddin@maddin.ch"
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "php-http/socket-client": "*",
-        "php-http/client-common": "*",
-        "php-http/message": "*",
-        "guzzlehttp/psr7": "*",
-        "symfony/yaml": "*"
+        "php": ">=7.2",
+        "php-http/socket-client": "^2.1",
+        "php-http/client-common": "^2.6",
+        "php-http/message": "^1.13",
+        "guzzlehttp/psr7": "^1.9",
+        "symfony/yaml": "^4.4||^5.4"
     },
     "require-dev": {
-        "symfony/debug": "*",
-        "atoum/atoum": "*"
+        "symfony/error-handler": "^6.0",
+        "atoum/atoum": "^4.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -28,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Smalot\\Cups\\": "src/"
+            "Maddin\\Cups\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Smalot\\Cups\\Tests\\Units\\": "tests/"
+            "Maddin\\Cups\\Tests\\Units\\": "tests/"
         }
     }
 }
